# tenor-dl

./: .gitignore  README.md  pyproject.toml
tenor_dl/: tenor_dl.py
