[tool.poetry]
name = "tenor-dl"
version = "0.2.0"
description = "simple CLI script to easily download gifs from tenor.com"
authors = ["zocker-160 <zocker1600@posteo.net>"]
license = "WTFPL"
readme = "README.md"

[tool.poetry.scripts]
tenor-dl = "tenor_dl.tenor_dl:main"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.28.1"
pyquery = "^1.4.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
